# RAG-Local-LLM

./: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: api.py  app.py  config.py  conversation_manager.py  document_processor.py  document_registry.py  embedding_manager.py  evaluation.py  llm_manager.py  prompt_templates.py  rag_engine.py  text_chunker.py  utils.py  vector_store.py
tests/: conftest.py  test_conversation_manager.py  test_document_processor.py  test_document_registry.py  test_embedding_manager.py  test_prompt_templates.py  test_rag_engine.py  test_text_chunker.py  test_vector_store.py
tests/eval/: sample_eval.json
tests/fixtures/: sample.md  sample.txt
